--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "name": "ko",
   "description": "Knockout Competition Stats Collector",
   "homepage": "https://github.com/wadey/ko",
-  "version": "0.1.0",
+  "version": "0.1.1",
+  "preferGlobal": true,
   "bin": {
     "ko": "cli.js"
   },
